after some research I've learned that the term chunk is also called a data chunk therefor it has been changed to "veri parçası/data chunk" which is the exact Turkish literal form.

--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -50,7 +50,7 @@ decrypter.unknownerror = Bilinmeyen hata
 decrypter.wrongcaptcha = Yanlış captcha kodu
 decrypter.wrongpassword = Yanlış Parola
 download.chunks.connection = Bağlantı
-download.chunks.label = Dosya bağlantı sayısı
+download.chunks.label = Dosya Veri Parçaları
 download.connection.idle = boşta
 download.connection.normal = İndir
 download.error.message.connectioncopyerror = Bağlantı klonlanamadı
@@ -118,7 +118,7 @@ gui.config.captcha.train.show_timeout = Captcha penceresi geri sayım (san)
 gui.config.clr.script = CLR Script
 gui.config.download.autoresume = Tekrar bağlan sürdürebilen indirmeleri kesebilsin
 gui.config.download.buffersize = Mak. ArabellekBoyutu[MB]
-gui.config.download.chunks = Dosya / bağlantı sayısı (Parçayükleme)
+gui.config.download.chunks = Dosya / Veri parçası indirme sayısı
 gui.config.download.connectionlost.wait = Bağlantı kaybında bekleme süresi [san]
 gui.config.download.crc = SFV/CRC mümkün olduğunda kontrol et
 gui.config.download.download.tab = İndirme Ayarları
