another minor fix

--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -118,11 +118,11 @@ gui.config.captcha.train.show_timeout = Captcha penceresi geri sayım (san)
 gui.config.clr.script = CLR Script
 gui.config.download.autoresume = Tekrar bağlan sürdürebilen indirmeleri kesebilsin
 gui.config.download.buffersize = Mak. ArabellekBoyutu[MB]
-gui.config.download.chunks = Dosya / Veri parçası indirme sayısı
+gui.config.download.chunks = Dosya / Veri parçaları indirme sayısı
 gui.config.download.connectionlost.wait = Bağlantı kaybında bekleme süresi [san]
 gui.config.download.crc = SFV/CRC mümkün olduğunda kontrol et
 gui.config.download.download.tab = İndirme Ayarları
-gui.config.download.downloadThread = Download sırasında sabit diske yaz
+gui.config.download.downloadThread = İndirme sırasında sabit diske yaz
 gui.config.download.ipcheck.disable = IP kontrolünü devre dışı bırak
 gui.config.download.ipcheck.externalinterval = Harici IP kontrol aralığı [san]
 gui.config.download.ipcheck.mask = İzin verilen IP'ler
