Fixed untranslatable strings in jD's about window
Added missing PL translation strings.

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -471,6 +471,7 @@ gui.config.plugin.optional.column_needs = Wymaga
 gui.config.plugin.optional.column_plugin = Plugin
 gui.config.plugin.optional.column_status = Status
 gui.config.plugin.optional.column_version = Wersja
+gui.config.plugin.optional.forcedactive = Wtyczka %s nie mogła zostać wyłączona.
 gui.config.plugin.optional.link_help = http://www.wiki.jdownloader.org/index.php?title=Uninstalling_Add-ons
 gui.config.plugin.optional.linktext_help = Pomoc
 gui.config.plugin.optional.name = Opcjonalne wtyczki
@@ -541,14 +542,23 @@ gui.config.unrar.path = Wypakuj do
 gui.config.unrar.remove_after_extract = Usuwać archiwa po udanym wypakowaniu?
 gui.config.unrar.remove_infofile = Usuwaj plik info po wypakowaniu
 gui.config.unrar.subpath = Podścieżka
+gui.config.unrar.subpath_minnum = Używaj podścieżki tylko w przypadku, gdy archiwum zawiera więcej niż x plików
 gui.config.unrar.thread = Przejdź do folderu po wypakowaniu
 gui.config.unrar.use_extractto = Używaj wybranej ścieżki wypakowywania
 gui.config.unrar.use_subpath = Używaj podścieżki
 gui.config.unrar.usehjmerge = Automatycznie scal pliki podzielone HJSplit
 gui.config.webupdate.name = Aktualizacja
 gui.configdialog.wikilink.theconfigurationmenu = http://wiki.jdownloader.org/index.php?title=Konfig_en:
-gui.dialog.about.sourceurl = http://jdservice.ath.cx/html/about_en.html
+gui.dialog.about.chat = Czat
+gui.dialog.about.email = Email
+gui.dialog.about.forum = Forum wsparcia technicznego
+gui.dialog.about.homepage = Strona domowa
+gui.dialog.about.jddevteam = Twórcy jDownloadera
+gui.dialog.about.member = Osoba
+gui.dialog.about.section = Dział
+gui.dialog.about.sourceurl = http://service.jdownloader.org/html/about_en.html
 gui.dialog.about.title = O Programie JDownloader
+gui.dialog.about.whatisjd = Do czego służy jDownloader?
 gui.dialogs.agb_tos.agbaccepted = Akceptuję Regulamin użytkowania
 gui.dialogs.agb_tos.description = Regulamin użytkowania serwisu %s nie zostały przeczytane i zaakceptowane.
 gui.dialogs.agb_tos.description2 = Nie został przeczytany i zaakceptowany.
@@ -1286,8 +1296,11 @@ plugins.errors.pluginerror = Błąd wtyczki. Powiadom Wsparcie Techniczne.
 plugins.errors.uploadedto.premiumtrafficreached = Osiągnięto limit ruchu
 plugins.errors.wrongpassword = Błędne hasło
 plugins.host.enterlinkpassword = Wprowadź hasło linku
+plugins.host.fastload.browsererror = Nie udało się otworzyć linku w przeglądarce
 plugins.host.fastload.errors = Uruchamianie przeglądarki jest nieprawidłowo skonfigurowane
 plugins.host.fastload.getticketmsg = Zdobądź bilet do Fast-load!
+plugins.host.fastload.info = Pierwszy raz próbujesz pobrać z fast-load.net.\r\nTa wtyczka ma pewien dodatek: Aby zacząć pobieranie, trzeba wpisać kod Captcha w przeglądarce.\r\nJD otworzy teraz odpowiednią stronę WWW.
+plugins.host.fastload.infourl = http://wiki.jdownloader.org?title=Fast-load.net
 plugins.host.fastload.overload.long = Przeciążenie Fast-load.net! Pobieranie z pełną prędkością możliwe tylko przez przeglądarkę!
 plugins.host.fastload.overload.short = Przeciążenie Fast-load.net
 plugins.host.fastload.prepare = Zaczekaj na potwierdzenie linku
@@ -1339,6 +1352,7 @@ plugins.hoster.datenklo.net.premiumpass = Hasło Premium
 plugins.hoster.datenklo.net.premiumuser = Użytkownik Premium
 plugins.hoster.datenklo.net.usepremium = Użyj konta premium
 plugins.hoster.error.agb = Regulamin użytkowania nie zaakceptowany
+plugins.hoster.fastload.bypassapi = Pomijanie API
 plugins.hoster.filefactory.getfileheaderiffilenametoolong1 = Jeśli nazwa jest skrócona, plik może zostać pobrany
 plugins.hoster.filefactory.getfileheaderiffilenametoolong2 = (Wymagane rozpoznawanie kodów Captcha; może zająć chwilę)
 plugins.hoster.general.passwordprotectedinput = Linki są zabezpieczone hasłem. Proszę wprowadzić hasło:
@@ -1451,6 +1465,7 @@ plugins.optional.jdhjsplit.linkmenu.package.merge = Scal pakiet
 plugins.optional.jdhjsplit.name = JD-HJMerge
 plugins.optional.jdlighttray.minimizetotray = Minimalizuj do zasobnika
 plugins.optional.jdlighttray.name = Ikona w zasobniku
+plugins.optional.jdlighttray.singleclick = Zmień stan okna pojedynczym kliknięciem
 plugins.optional.jdlighttray.startminimized = Uruchom zminimalizowane
 plugins.optional.jdlowspeed.maxspeed = Prędkość połączenia z internetem w kb/s (DSL 3000 to 350kb/s)
 plugins.optional.jdlowspeed.minspeed = Minimalna prędkość pobierania w kb/s
@@ -1464,13 +1479,20 @@ plugins.optional.jdunrar.config.advanced = Ustawienia zaawansowane
 plugins.optional.jdunrar.config.passwordlist = Lista wszystkich haseł. Każda linia odpowiada za jedno hasło.
 plugins.optional.jdunrar.config.passwordlist.import = Importuj starą listę haseł
 plugins.optional.jdunrar.config.passwordlist.import.message = Czy napewno chcesz zaimportować starą listę haseł?
+plugins.optional.jdunrar.config.passwordlist2 = Lista wszystkich haseł. Każda linia to osobne hasło. Dostępne hasła: %s
 plugins.optional.jdunrar.config.passwordtab = Lista haseł
+plugins.optional.jdunrar.crcerrorin = Wypakowywanie: Nie powiodło się (CRC w %s)
 plugins.optional.jdunrar.filefilter = Woluminy startowe RAR
+plugins.optional.jdunrar.filefilter.extractto = Katalog docelowy
+plugins.optional.jdunrar.linkmenu.container = JDUnrar
 plugins.optional.jdunrar.linkmenu.extract = Wypakuj
 plugins.optional.jdunrar.linkmenu.openextract = Otwórz folder
+plugins.optional.jdunrar.linkmenu.openextract2 = Otwórz folder (%s)
 plugins.optional.jdunrar.linkmenu.package.extract = Wypakuj pakiet
+plugins.optional.jdunrar.linkmenu.setextract = Ustal miejsce docelowe
 plugins.optional.jdunrar.menu.config = Ustawienia
 plugins.optional.jdunrar.menu.extract.singlefils = Wypakuj archiwum(a)
+plugins.optional.jdunrar.menu.pwlist = Lista haseł
 plugins.optional.jdunrar.menu.queue = Bieżąca kolejka
 plugins.optional.jdunrar.menu.queue.clear = Wyczyść kolejkę
 plugins.optional.jdunrar.menu.queue.extract = Wypakuj %s
@@ -1484,6 +1506,8 @@ plugins.optional.langfileeditor.adoptdefaults.missing = Adoptuj domyślne dla br
 plugins.optional.langfileeditor.adoptdefaultvalue = Adoptuj wartość domyślną
 plugins.optional.langfileeditor.browse = Przeglądaj
 plugins.optional.langfileeditor.cancel = Anuluj
+plugins.optional.langfileeditor.changed.message = Plik tłumaczenia zmienił się. Czy chcesz zapisać zmiany?
+plugins.optional.langfileeditor.changed.title = Zapisać zmiany?
 plugins.optional.langfileeditor.clearallvalues = Wyczyść wszystkie wartości
 plugins.optional.langfileeditor.clearvalues = Wyczyść wartość(i)
 plugins.optional.langfileeditor.close = Zamknij
