Added localized strings for jD's plugins menu + localized strings in PL translation.

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -946,6 +946,7 @@ gui.tab.plugin_activity.column_progress = Postęp
 gui.table.contextmenu.abort = Przerwij
 gui.table.contextmenu.abortpackage = Przerwij
 gui.table.contextmenu.browselink = Otwórz w przeglądarce
+gui.table.contextmenu.check = /* Sprawdź dostępność
 gui.table.contextmenu.copypassword = Kopiuj hasło
 gui.table.contextmenu.copypassword_package = Kopiuj hasło
 gui.table.contextmenu.delete = Usuń
@@ -1410,6 +1411,9 @@ plugins.netload.downloadpassword_wrong = Hasło do linku jest nieprawidłowe
 plugins.optional.folderwatch.checkintervall = Interwał sprawdzania [min]
 plugins.optional.folderwatch.delete = Usuń
 plugins.optional.folderwatch.folder = Folder:
+plugins.optional.folderwatch.menu.check = Sprawdź
+plugins.optional.folderwatch.menu.reset = Resetuj
+plugins.optional.folderwatch.menu.startstop = Włącz/Wyłącz
 plugins.optional.folderwatch.name = Obserwuj folder
 plugins.optional.folderwatch.waittime = Czas oczekiwania
 plugins.optional.getter.name = Pobieracz
@@ -1499,7 +1503,7 @@ plugins.optional.jdunrar.menu.queue.extract = Wypakuj %s
 plugins.optional.jdunrar.menu.queue.start = Uruchom kolejkę
 plugins.optional.jdunrar.menu.toggle = Aktywuj
 plugins.optional.jdunrar.name = JD-Unrar
-plugins.optional.jdunrar.progress.extractfile = Wypadkuj %s
+plugins.optional.jdunrar.progress.extractfile = Wypakuj %s
 plugins.optional.langfileeditor.addkey = Dodaj klucz
 plugins.optional.langfileeditor.adoptdefaults = Adoptuj domyślne
 plugins.optional.langfileeditor.adoptdefaults.missing = Adoptuj domyślne dla brakujących wpisów
@@ -1598,8 +1602,12 @@ plugins.optional.premiumcollector.onlyvalid = Akceptuj tylko prawidłowe i nie w
 plugins.optional.premiumcollector.overwrite = Automatycznie nadpisuj konta
 plugins.optional.premiumcollector.password = Hasło
 plugins.optional.premiumcollector.username = Nazwa użytkownika
+plugins.optional.remotecontrol.help = /help pokazuje informacje o autorach.
 plugins.optional.remotecontrol.name = Zdalna kontrola
 plugins.optional.remotecontrol.port = Port:
+plugins.optional.remotecontrol.startedonport = uruchomiona na porcie
+plugins.optional.remotecontrol.stopped = wyłączona.
+plugins.optional.remotecontrol.toggle = Włącz/Wyłącz
 plugins.optional.streamsharingtool.action.end = Zamknij
 plugins.optional.streamsharingtool.action.save.dlc.finished = Kontener StreamingShare gotowy do użycia
 plugins.optional.streamsharingtool.action.start = Start
