langfile fix (hoster menu)

--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -452,10 +452,10 @@ gui.menu.action.help.accel = F1
 gui.menu.action.help.desc = Show support
 gui.menu.action.help.mnem = s
 gui.menu.action.help.name = Support
-gui.menu.action.host.accel = CTRL+Alt+H
-gui.menu.action.host.desc = Open Host Configuration
-gui.menu.action.host.mnem = H
-gui.menu.action.host.name = Host configuration
+gui.menu.action.hostconfig.accel = CTRL+Alt+H
+gui.menu.action.hostconfig.desc = Open Host Configuration
+gui.menu.action.hostconfig.mnem = H
+gui.menu.action.hostconfig.name = Host configuration
 gui.menu.action.install.accel = CTRL+I
 gui.menu.action.install.desc = Install Addon(*.jdu)
 gui.menu.action.install.filefilter = JD Addons
